--- a/DynamicWorldSandbox.Scheduler/DynamicWorldSandbox.Scheduler/DynamicWorldSandbox.Scheduler.csproj
+++ b/DynamicWorldSandbox.Scheduler/DynamicWorldSandbox.Scheduler/DynamicWorldSandbox.Scheduler.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5994809D-4CB0-4226-A723-474031CA82F5}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{2064B28E-39D7-44BF-AE7A-420149C2FE33}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicWorldSandbox.Model</RootNamespace>
-    <AssemblyName>DynamicWorldSandbox.Model</AssemblyName>
+    <RootNamespace>DynamicWorldSandbox.Scheduler</RootNamespace>
+    <AssemblyName>DynamicWorldSandbox.Scheduler</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,7 +35,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,21 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Building.cs" />
-    <Compile Include="CoordinateSystem\ITileFieldCalculator.cs" />
-    <Compile Include="CoordinateSystem\SqareFieldCalculator.cs" />
-    <Compile Include="Creature.cs" />
-    <Compile Include="CoordinateSystem\HexTileCalculator.cs" />
-    <Compile Include="IItem.cs" />
-    <Compile Include="Inventory.cs" />
-    <Compile Include="Plants\Tree.cs" />
-    <Compile Include="LocalWildlife.cs" />
-    <Compile Include="Tile.cs" />
-    <Compile Include="World.cs" />
+    <Compile Include="IScheduleOperation.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorldLoader\LayerLoader.cs" />
-    <Compile Include="WorldLoader\WorldLoaderService.cs" />
+    <Compile Include="Scheduler.cs" />
+    <Compile Include="SchedulerJob.cs" />
+    <Compile Include="SomeGeneralPerformanecTests.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
