--- a/DynamicWorldSandbox.Model/DynamicWorldSandbox.Model.csproj
+++ b/DynamicWorldSandbox.Model/DynamicWorldSandbox.Model.csproj
@@ -49,7 +49,8 @@
     <Compile Include="IItem.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Plants\Tree.cs" />
-    <Compile Include="LocalWildlife.cs" />
+    <Compile Include="Wildlife\IDistributionFunction.cs" />
+    <Compile Include="Wildlife\LocalWildlife.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
