--- a/DynamicWorldSandbox.SampleProject/DynamicWorldSandbox.SampleProject.csproj
+++ b/DynamicWorldSandbox.SampleProject/DynamicWorldSandbox.SampleProject.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="GameRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
